stargas/src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Equipment Sales</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Appt Scheduled</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Contract Signed</fullName>
        </values>
        <values>
            <fullName>Install Completed</fullName>
        </values>
        <values>
            <fullName>Install Scheduled</fullName>
        </values>
        <values>
            <fullName>Invoiced</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Quote Pending</fullName>
        </values>
        <values>
            <fullName>Quoted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Oil%2C Propane%2C Service Only</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Not Sold</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Sold</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AC_Location__c</fullName>
        <description>Does the customer have an attic or unfinished basement?</description>
        <inlineHelpText>Determine if the customer has an attic with a minimum height of 4 feet or an unfinished basement.</inlineHelpText>
        <label>AC Location</label>
        <picklist>
            <picklistValues>
                <fullName>Attic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unfinished Basement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>A_C_New_or_Replacement__c</fullName>
        <description>Is the customer replacing current A/C system or looking for new installation.</description>
        <inlineHelpText>Determine if the customer is replacing current system or purchasing a new installation.</inlineHelpText>
        <label>A/C New or Replacement</label>
        <picklist>
            <picklistValues>
                <fullName>New Install</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replacement System</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>A_C__c</fullName>
        <label>A/C</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AccountNum__c</fullName>
        <formula>Account.Energy_AccountNumLong__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Email__c</fullName>
        <formula>Account.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Terminated__c</fullName>
        <formula>Account.Energy_Account_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active/Terminated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Zone__c</fullName>
        <label>Additional Zone</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>n</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Address1_verify__c</fullName>
        <formula>Delivery_Street__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_Financed_formula__c</fullName>
        <formula>Principal_Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Financed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_of_each_Finance_Payment__c</fullName>
        <label>Monthly Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Percentage_Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Annual Percentage Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Annual_Usage_gal__c</fullName>
        <label>Annual Usage (gal)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Appointment_Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Appointment Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Appointment_Cancel_Reason__c</fullName>
        <label>Appointment Cancel Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appointment_Comments__c</fullName>
        <label>Appointment Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Appointment_Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Appointment Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Opportunities (Appointment Created By)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Appointment_Date__c</fullName>
        <label>Appointment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Appointment_End_Time__c</fullName>
        <label>Appointment End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Appointment_Meeting_Type__c</fullName>
        <label>Appointment Meeting Type</label>
        <picklist>
            <picklistValues>
                <fullName>Personal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Appointment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Appointment_Reschedule_Reason__c</fullName>
        <label>Appointment Reschedule Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appointment_Scheduled_With__c</fullName>
        <description>Who is the RESS meeting with?</description>
        <inlineHelpText>Appointment should only be set with Owner or Power of Attorney.</inlineHelpText>
        <label>Appointment Scheduled With</label>
        <picklist>
            <picklistValues>
                <fullName>Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power of Attorney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Appointment_Start_Time__c</fullName>
        <label>Appointment Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Appointment_Status__c</fullName>
        <label>Appointment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Tentative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rescheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Appointment_Subject__c</fullName>
        <label>Appointment Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attic_Access__c</fullName>
        <description>How will the RESS access the attic?</description>
        <inlineHelpText>Determine how the RESS will access the attic.</inlineHelpText>
        <label>Attic Access</label>
        <picklist>
            <picklistValues>
                <fullName>Stairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pulldown Ladder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ladder</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Barbeque_Grill__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Barbeque Grill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Best_Time_To_Contact__c</fullName>
        <label>Best Time To Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Best_Time_to_Call__c</fullName>
        <label>Best Time to Call</label>
        <picklist>
            <picklistValues>
                <fullName>Morning (9am-12pm EST)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afternoon (12-4pm EST)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Afternoon (4-6pm EST)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evening (6-9pm EST)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <label>Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Same_as_Delivery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billing Same as Delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <label>Billing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street__c</fullName>
        <label>Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Zip__c</fullName>
        <label>Billing Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Amount_verify__c</fullName>
        <description>IF( Budget_Payment_Period_Override__c = True,  Budget_Payment_Period_Override_Amount__c,  Pmt_Per_Period__c)</description>
        <formula>IF( Budget_Payment_Period_Override__c = True,  Budget_Payment_Period_Override_Amount__c,  Pmt_Per_Period__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>IF( Budget_Payment_Period_Override__c = True,  Budget_Payment_Period_Override_Amount__c,  Pmt_Per_Period__c)</inlineHelpText>
        <label>Budget Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Duration_verify__c</fullName>
        <description>Verification Summary Section</description>
        <formula>TEXT(Number_Of_Budget_Payments__c)</formula>
        <inlineHelpText>Verification Summary Section</inlineHelpText>
        <label>Budget Duration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Payment_Period_Override_Amount__c</fullName>
        <label>Budget Payment Override Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Payment_Period_Override_Reason__c</fullName>
        <label>Budget Payment Override Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per Sales Rep</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Budget_Payment_Period_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Payment Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budget_Start_Date_test_date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>zBudget Start Date (test date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Budget_Start_Month__c</fullName>
        <label>Budget Start Month</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Budget_Start_Month_default__c</fullName>
        <formula>IF(
CASE( Territory__r.Division__r.Database__c,
&quot;10&quot;, IF(DAY(Budget_Start_Date_test_date__c) &lt;= 20, MOD(MONTH(Budget_Start_Date_test_date__c)+1,12), MOD(MONTH(Budget_Start_Date_test_date__c)+2,12)),
&quot;20&quot;, IF(DAY(Budget_Start_Date_test_date__c) &lt;= 28, MOD(MONTH(Budget_Start_Date_test_date__c)+1,12), MOD(MONTH(Budget_Start_Date_test_date__c)+2,12)),
&quot;30&quot;, IF(DAY(Budget_Start_Date_test_date__c) &lt;= 24, MOD(MONTH(Budget_Start_Date_test_date__c)+1,12), MOD(MONTH(Budget_Start_Date_test_date__c)+2,12)),
&quot;50&quot;, IF(DAY(Budget_Start_Date_test_date__c) &lt;= 28, MOD(MONTH(Budget_Start_Date_test_date__c)+1,12), MOD(MONTH(Budget_Start_Date_test_date__c)+2,12)),
MOD(MONTH(Budget_Start_Date_test_date__c),12)
) = 0,
12,
CASE( Territory__r.Division__r.Database__c,
&quot;10&quot;, IF(DAY(Budget_Start_Date_test_date__c) &lt;= 20, MOD(MONTH(Budget_Start_Date_test_date__c)+1,12), MOD(MONTH(Budget_Start_Date_test_date__c)+2,12)),
&quot;20&quot;, IF(DAY(Budget_Start_Date_test_date__c) &lt;= 28, MOD(MONTH(Budget_Start_Date_test_date__c)+1,12), MOD(MONTH(Budget_Start_Date_test_date__c)+2,12)),
&quot;30&quot;, IF(DAY(Budget_Start_Date_test_date__c) &lt;= 24, MOD(MONTH(Budget_Start_Date_test_date__c)+1,12), MOD(MONTH(Budget_Start_Date_test_date__c)+2,12)),
&quot;50&quot;, IF(DAY(Budget_Start_Date_test_date__c) &lt;= 28, MOD(MONTH(Budget_Start_Date_test_date__c)+1,12), MOD(MONTH(Budget_Start_Date_test_date__c)+2,12)),
MOD(MONTH(Budget_Start_Date_test_date__c),12)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget Start Month (default)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget_Start_Month_number__c</fullName>
        <formula>CASE( TEXT(Budget_Start_Month__c),
&quot;January&quot;, 1,
&quot;February&quot;, 2,
&quot;March&quot;, 3,
&quot;April&quot;, 4,
&quot;May&quot;, 5,
&quot;June&quot;, 6,
&quot;July&quot;, 7,
&quot;August&quot;, 8,
&quot;September&quot;, 9,
&quot;October&quot;, 10,
&quot;November&quot;, 11,
&quot;December&quot;, 12,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget Start Month (number)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bypass_Credit_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Credit Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass_Reason__c</fullName>
        <label>Bypass Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Credit Check Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CARE_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field indicates that the CARE email has been sent.</description>
        <inlineHelpText>Field indicates that the CARE email has been sent.</inlineHelpText>
        <label>CARE Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CARE_Offered__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if CARE was offered (if applicable - CARE cannot be offered to renters).</inlineHelpText>
        <label>CARE Offered?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CARE_Tank_Charge__c</fullName>
        <description>Used by the Installation Team.</description>
        <inlineHelpText>Installation - Direct Costs - CARE Tank Charge.</inlineHelpText>
        <label>CARE Tank Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CARE_Total__c</fullName>
        <label>CARE Total</label>
        <summarizedField>Prospect_Service_Contract__c.CARE_Transfer_Price__c</summarizedField>
        <summaryForeignKey>Prospect_Service_Contract__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CARE_Transfer_Price__c</fullName>
        <description>Copied from the Prospect Service Contract. Needed for the CARE Notification email.</description>
        <inlineHelpText>Copied from the Prospect Service Contract. Needed for the CARE Notification email.</inlineHelpText>
        <label>CARE Transfer Price</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CalSubject__c</fullName>
        <formula>Name &amp; &quot;-&quot; &amp; Delivery_Street__c &amp; &quot;-&quot; &amp; Delivery_City__c &amp;&quot; - &quot;&amp; Delivery_State_Province__c &amp;&quot; - &quot; &amp; Phone__c &amp; &quot;-&quot; &amp; Travel_Zone_Oppty__c &amp; if(text(Equipment__c) = null,&quot;&quot;,&quot; - &quot;&amp; text(Equipment__c)) &amp; &quot;-&quot;  &amp;  AccountNum__c &amp; &quot;-&quot; &amp; Active_Terminated__c &amp; &quot;-&quot; &amp;  TEXT( Customer_Since__c)  &amp; &quot;-&quot; &amp; CreatedBy.Alias  &amp; &quot;-&quot; &amp;  Owner.LastName &amp; Left(Owner.FirstName,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CalendarSubject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Reason__c</fullName>
        <label>Call Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Heating Oil - Heating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heating Oil - Water Heater</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heating Oil - Pool Heater</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natural Gas - Heating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natural Gas - Water Heater</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natural Gas - Pool Heater</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Propane - Heating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Propane - Water Heater</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Propane - Pool Heater</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Propane - Grill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Propane - Appliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tenant Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Conditioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plumbing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chimney Cleaning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natural Gas Generator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Propane Generator</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ceiling_Fee__c</fullName>
        <label>Ceiling Fee</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ceiling_Initial__c</fullName>
        <label>Ceiling Initial</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ceiling_Initial_verify__c</fullName>
        <formula>IF ( (Override_Ceiling_Initial__c &gt; 0), Override_Ceiling_Initial__c,  Ceiling_Initial__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ceiling Initial</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ceiling_Limit_Welcome_Kit__c</fullName>
        <label>Ceiling_Limit_Welcome_Kit</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ceiling_Limit__c</fullName>
        <label>Ceiling Limit</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ceiling_Limit_verify__c</fullName>
        <formula>IF( (Override_Ceiling_Limit__c &gt; 0), Override_Ceiling_Limit__c, Ceiling_Limit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ceiling Limit</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cell_Phone__c</fullName>
        <formula>Account.PersonContact.MobilePhone</formula>
        <inlineHelpText>Person Account Cell Phone</inlineHelpText>
        <label>Cell #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cell_Phone_verify__c</fullName>
        <formula>Cell_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cell #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Oppty__c</fullName>
        <formula>Territory__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_verify__c</fullName>
        <formula>Delivery_City2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Prospect_Type_ID__c</fullName>
        <formula>IF(Account.RecordType.Name = &quot;Energy Account&quot;,
   Account.RecordType.Name &amp; &quot; (&quot; &amp; Energy_AccountNum__c &amp; &quot;)&quot;,
   Account.RecordType.Name
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client/Prospect Type (ID)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Sold_Date__c</fullName>
        <description>If Equipment, use CloseDate, else use Sold_Date__c.</description>
        <formula>IF(  RecordTypeId  = &quot;012G0000001BCIs&quot;,  CloseDate,  Sold_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close / Sold Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Co_Serv_Tech_Hours__c</fullName>
        <description>Used by Installation Team.</description>
        <inlineHelpText>Installation - Service Technicians - Technician Hours</inlineHelpText>
        <label>Co. Serv Tech Hours</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Co_Serv_Tech_s__c</fullName>
        <description>Used by Installation Team.</description>
        <inlineHelpText>Installation - Service techs - Company Service Tech $s</inlineHelpText>
        <label>Co. Serv. Tech $&apos;s</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comm_pct__c</fullName>
        <description>Used by Installation Team.</description>
        <formula>Sales_Comm__c / Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Installation - Commissions - Commissions %</inlineHelpText>
        <label>Comm %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Comments_ie_costs_pending_etc__c</fullName>
        <description>Used by Installation Team</description>
        <inlineHelpText>Installation - Additional Comments</inlineHelpText>
        <label>Comments: ie. costs pending, etc.</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_verify__c</fullName>
        <description>Verification Summary Section</description>
        <formula>( Service_Company_Oppty__c )</formula>
        <inlineHelpText>Verification Summary Section</inlineHelpText>
        <label>Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cooking_Range__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cooking Range</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_ToDo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Summary Page</description>
        <label>Create ToDo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Bypass_Reason__c</fullName>
        <label>Credit Bypass Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Existing Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Check Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corp Alliance (Weichert etc)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Guarantee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Load to Load CC option</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security Deposit Program</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Check_History_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Most recent Credit Check History record associated with this Opportunity.</inlineHelpText>
        <label>Credit Check / History</label>
        <referenceTo>Credit_Check_History__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Check_verify__c</fullName>
        <description>Verification Summary Section</description>
        <formula>TEXT( Decision__c )</formula>
        <inlineHelpText>Verification Summary Section</inlineHelpText>
        <label>Credit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_First_Name__c</fullName>
        <label>Credit First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Last_Name__c</fullName>
        <label>Credit Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Review_Approve_Decline__c</fullName>
        <label>Credit Review Approve/Decline</label>
        <picklist>
            <picklistValues>
                <fullName>Approve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decline</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Score__c</fullName>
        <label>Credit Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cross_Street__c</fullName>
        <label>Cross Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cross_Street_verify__c</fullName>
        <formula>Cross_Street__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cross Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_City__c</fullName>
        <label>Current City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Employer__c</fullName>
        <label>Current Employer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Postal_Code__c</fullName>
        <label>Current Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_State__c</fullName>
        <label>Current State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Street_1__c</fullName>
        <label>Current Street 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Street_2__c</fullName>
        <label>Current Street 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Owned__c</fullName>
        <label>Customer Owned?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Referral__c</fullName>
        <inlineHelpText>If new oil acct was referred by an existing customer enter the zone &amp; account # ex. 10-123456.  Ask the new customer for the name and/or address of who referred them to locate the account #. Referral is applied when the new acct takes 1st delivery.</inlineHelpText>
        <label>Customer Referral</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Since__c</fullName>
        <formula>Account.Customer_Since__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <description>Used by Installation Team</description>
        <inlineHelpText>Yes = any prior relationship; No = no prior relationship</inlineHelpText>
        <label>Customer?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>